--- a/projects-et.html
+++ b/projects-et.html
@@ -71,7 +71,7 @@
   
   <!-- Work Container -->
   <div class="container-fluid"
-      <div class="row section-header-row">
+      <div class="row section-header-row" id="showcase-header">
           <div class="col-12 text-center">
             <h2 class="section-header">Email Development</h2>
             <hr class="section-hr">
@@ -79,6 +79,33 @@
             <hr class="section-hr">
             <h5 class="section-subheader">Responsive and Interactive Email Templates</h5>
         </div>
+    </div>
+    <div class="row showcase-row justify-content-center">
+        <div class="col-12 col-md-4 order-12 showcase-text">
+            <h3>Title</h3>
+            <p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
+            <h4>Technologies</h4>
+            <p>HTML5, CSS3, SASS, Javascript, Jquery, Bootstrap, Git/Github</p>
+          </div>
+      <div class="col-12 col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid" alt="placeholder"></div>
+    </div>
+    <div class="row showcase-row justify-content-center">
+        <div class="col-12 col-md-4 showcase-text">
+            <h3>Title</h3>
+            <p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
+            <h4>Technologies</h4>
+            <p>HTML5, CSS3, SASS, Javascript, Jquery, Bootstrap, Git/Github</p>
+          </div>
+      <div class="col-12 col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid" alt="placeholder"></div>
+    </div>
+    <div class="row showcase-row justify-content-center">
+        <div class="col-12 col-md-4 order-12 showcase-text">
+            <h3>Title</h3>
+            <p>A simple web app built to quickly find jobs in Ireland. Users enter the search term and desired county, and are offered job listings from 3 of the most popular job sites in Ireland</p>
+            <h4>Technologies</h4>
+            <p>HTML5, CSS3, SASS, Javascript, Jquery, Bootstrap, Git/Github</p>
+          </div>
+      <div class="col-12 col-md-4"><img src="http://via.placeholder.com/350x150" class="img-fluid" alt="placeholder"></div>
     </div>
     <div class="row showcase-row justify-content-center">
         <div class="col-12 col-md-4 showcase-text">
